@@ -1,3 +1,9 @@
+2007-02-22  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/yarp-imageviewer/gCamView.cpp: Reduce verbosity of 
+	yarpview program; now it prints messages to the console
+	only when things go wrong, now when they are going right.
+
 2007-02-17  Alexandre Bernardino  <alex@isr.ist.utl.pt>
 
 	* conf/FindAce.cmake: Added specific rules for linking with MinGW:
